applications/tracker/pgStatefulSet.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres
spec:
  serviceName: "postgres"
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
      - name: postgres
        image: postgres:14 # You can change the version here
        volumeMounts:
        - name: postgres-data
          mountPath: /var/lib/postgresql/data
  volumeClaimTemplates:
  - metadata:
        name: postgres-data
    spec:
      accessModes:
            - ReadWriteOnce
      resources:
          requests:
              storage: 5Gi
      storageClassName: local-storage
