applications/tracker/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
spec:
  clusterIP: None
  selector:
    app: postgres
  ports:
    - port: 5432
---
# Postgres NodePort service
apiVersion: v1
kind: Service
metadata:
  name: postgres-lan
spec:
  type: NodePort
  selector:
    app: postgres
  ports:
    - port: 5432
      nodePort: 30432
---
# Tracker Nodeport Service
apiVersion: v1
kind: Service
metadata:
  name: tracker-lan-service
spec:
  type: NodePort
  selector:
    app: tracker
  ports:
    - port: 8080
      nodePort: 30433
---
# Tracker Cluster Service
# Internal DNS:  http://tracker-public-for-cloudflare.default.svc.cluster.local 
apiVersion: v1
kind: Service
metadata:
  name: tracker-public-for-cloudflare
spec:
  selector:
    app: tracker
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
